# gettingstarted

./: CMakeLists.txt  Findglad.cmake  Findglfw.cmake  Shader.cpp  Shader.h  Simple2D.frag  Simple2D.vert  conan_paths.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  main.cpp
